--- a/Views/404.ejs
+++ b/Views/404.ejs
@@ -2,8 +2,14 @@
 <%- include('templates/Navbar.ejs') %>
 
 <div class="container">
-    <div class="mt-4">
+    <div class="mt-4 d-flex justify-content-center">
         <h1>This page doesn't exist <span role="img" aria-label="Not know">🤷‍♂️</span> </h1>
+    </div>
+    <div class="d-flex text-secondary justify-content-center mt-2">
+        <p>Sorry. The page than you are looking for does NOT exist.</p>
+    </div>
+    <div class="d-flex justify-content-center">
+        <a href="/">Return to Home Page</a>
     </div>
 </div>
 
