--- a/Views/service.ejs
+++ b/Views/service.ejs
@@ -4,5 +4,7 @@
 <div class="container mt-4">
   <h1>Service Page</h1>
   <h2><%= description %></h2>
+  <p>Lorem, ipsum dolor.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet veritatis modi non dicta, itaque facere!</p>
 </div>
 <%- include('templates/htmlFooter.ejs') %>
