--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -2,8 +2,18 @@
 include('templates/Navbar.ejs') %>
 
 <div class="container mt-4">
-  <h1>Main page</h1>
+  <div class="row">
+    <div class="col-md-6">
+      <h1>Main page</h1>
   <h2><%= description %></h2>
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, <b>laudantium!</b></p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore autem laborum quam est asperiores dolores animi harum cumque, culpa ad rerum repellendus unde aspernatur necessitatibus <b>voluptates beatae iusto rem ea.</b></p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit facere esse pariatur quia ab delectus enim, dicta quasi ipsa corporis asperiores. <b> Et qui unde doloremque minima.</b> Magnam rerum aliquid cumque similique quidem atque fugiat minima!</p>
+    </div>
+    <div class="col-md-6">
+      <img src="https://thelimohub.com/wp-content/uploads/2020/02/Vector-Art.jpg" alt="Pet" style="width: 500px;">
+    </div>
+  </div>
 </div>
 
 <%- include('templates/htmlFooter.ejs') %>
